--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
     <div class="row">
       <ul id="footer-home" class="ten centered">
+				<li><a href="{{ site.baseurl }}/research">Research</a></li>
+				<li><a href="{{ site.baseurl }}/enseignements">Enseignements</a></li>
         <li><a href="{{ site.baseurl }}/archives">Archives</a></li>
         <li><a href="{{ site.baseurl }}/about">About</a></li>
         <li><a href="{{ site.baseurl }}/feed.xml">RSS Feed</a></li>
