--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
       <ul id="footer-home" class="ten centered">
 				<li><a href="{{ site.baseurl }}/research">Research</a></li>
 				<li><a href="{{ site.baseurl }}/enseignements">Enseignements</a></li>
+				<li><a href="{{ site.baseurl }}/files/CV.pdf">CV</a></li>
         <li><a href="{{ site.baseurl }}/archives">Archives</a></li>
         <li><a href="{{ site.baseurl }}/feed.xml">RSS Feed</a></li>
         <li><a href="mailto:{{ site.email }}">Contact</a></li>
