Add the icon on the home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,8 +9,13 @@
 		<div id="content" class="fade-in">
 			<div class="row">
 				<div id="logo" class="slide-down">
-					<img src="{{ site.logoUrl }}"></img>
+					<img src="{{ site.logoUrl }}" />
 				</div>
+				<img src="/img/social/diaspora.png" alt="Diaspora*" />
+				<img src="/img/social/LinkedIn.png" alt="LinkedIn" />
+				<img src="/img/social/ResearchGate.png" alt="ResearchGate" />
+				<img src="/img/social/RSS.png" alt="Flux RSS" />
+				<img src="/img/social/Email.png" alt="E-mail" />
 				{{ content }}
 			</div>
 
