CSS for the social icon

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,11 +11,13 @@
 				<div id="logo" class="slide-down">
 					<img src="{{ site.logoUrl }}" />
 				</div>
-				<img src="/img/social/diaspora.png" alt="Diaspora*" />
-				<img src="/img/social/LinkedIn.png" alt="LinkedIn" />
-				<img src="/img/social/ResearchGate.png" alt="ResearchGate" />
-				<img src="/img/social/RSS.png" alt="Flux RSS" />
-				<img src="/img/social/Email.png" alt="E-mail" />
+				<div id="socialIcon" class="slide-down">
+					<img src="/img/social/diaspora.png" alt="Diaspora*" />
+					<img src="/img/social/LinkedIn.png" alt="LinkedIn" />
+					<img src="/img/social/ResearchGate.png" alt="ResearchGate" />
+					<img src="/img/social/RSS.png" alt="Flux RSS" />
+					<img src="/img/social/Email.png" alt="E-mail" />
+				</div>
 				{{ content }}
 			</div>
 
