--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,6 +10,19 @@
    <div id="logo" class="ten centered slide-down">
       <img src="{{ site.logoUrl }}"></img> 
    </div>
+   <div id="socialIcon" class="slide-down">
+    <a href="https://framasphere.org/u/etiennem">
+      <img src="/img/social/diaspora.png" alt="Diaspora*" title="Diaspora*" />
+    </a><a href="https://www.linkedin.com/profile/view?id=85024349">
+      <img src="/img/social/LinkedIn.png" alt="LinkedIn" title="LinkedIn" />
+    </a><a href="https://www.researchgate.net/profile/Etienne_Michon2">
+      <img src="/img/social/ResearchGate.png" alt="ResearchGate" title="ResearchGate" />
+    </a><a href="/feed.xml">
+      <img src="/img/social/RSS.png" alt="Flux RSS" title="Flux RSS" />
+    </a><a href="mailto:{{ site.email }}">
+      <img src="/img/social/Email.png" alt="E-mail" title="E-mail" />
+    </a>
+   </div>
    <div id="content" class="fade-in">
       <div class="row">
          <header>
