--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,8 @@
 				<li><a href="{{ site.baseurl }}/research">Research</a></li>
 				<li><a href="{{ site.baseurl }}/enseignements">Enseignements</a></li>
 				<li><a href="{{ site.baseurl }}/files/CV.pdf">CV</a></li>
+        <li><a href="{{ site.baseurl }}/logiciels">Logiciels</a></li>
         <li><a href="{{ site.baseurl }}/archives">Archives</a></li>
-        <li><a href="{{ site.baseurl }}/feed.xml">RSS Feed</a></li>
-        <li><a href="mailto:{{ site.email }}">Contact</a></li>
       </ul>
     </div>
 
