Remove Diaspora link

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,9 +12,7 @@
 					<img src="{{ site.logoUrl }}" />
 				</div>
 				<div id="socialIcon" class="slide-down">
-					<a href="https://framasphere.org/u/etiennem">
-						<img src="/img/social/diaspora.png" alt="Diaspora*" title="Diaspora*" />
-					</a><a href="https://www.linkedin.com/profile/view?id=85024349">
+					<a href="https://www.linkedin.com/profile/view?id=85024349">
 						<img src="/img/social/LinkedIn.png" alt="LinkedIn" title="LinkedIn" />
 					</a><a href="https://www.researchgate.net/profile/Etienne_Michon2">
 						<img src="/img/social/ResearchGate.png" alt="ResearchGate" title="ResearchGate" />
