One place with the social info

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,17 +11,7 @@
 				<div id="logo" class="slide-down">
 					<img src="{{ site.logoUrl }}" />
 				</div>
-				<div id="socialIcon" class="slide-down">
-					<a href="https://www.linkedin.com/profile/view?id=85024349">
-						<img src="/img/social/LinkedIn.png" alt="LinkedIn" title="LinkedIn" />
-					</a><a href="https://www.researchgate.net/profile/Etienne_Michon2">
-						<img src="/img/social/ResearchGate.png" alt="ResearchGate" title="ResearchGate" />
-					</a><a href="/feed.xml">
-						<img src="/img/social/RSS.png" alt="Flux RSS" title="Flux RSS" />
-					</a><a href="mailto:{{ site.email }}">
-						<img src="/img/social/Email.png" alt="E-mail" title="E-mail" />
-					</a>
-				</div>
+				{% include social.html %}
 				{{ content }}
 			</div>
 
