--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,40 +1,30 @@
 <!DOCTYPE HTML>
 <html lang="fr">
-  <head>
-    {% include head.html %}
-  </head>
-  <body>
-     <div id="back" class="back fade-in row">
-        <a href="{{ site.baseurl }}/">❮ Back</a>
-   </div>
+	<head>
+		{% include head.html %}
+	</head>
+	<body>
+		<div id="back" class="back fade-in row">
+			<a href="{{ site.baseurl }}/">❮ Back</a>
+		</div>
 
-    <div id="logo" class="ten centered slide-down">
-       <img src="{{ site.logoUrl }}"></img>
-    </div>
-    <div id="socialIcon" class="slide-down">
-      <a href="https://www.linkedin.com/profile/view?id=85024349">
-        <img src="/img/social/LinkedIn.png" alt="LinkedIn" title="LinkedIn" />
-      </a><a href="https://www.researchgate.net/profile/Etienne_Michon2">
-        <img src="/img/social/ResearchGate.png" alt="ResearchGate" title="ResearchGate" />
-      </a><a href="/feed.xml">
-        <img src="/img/social/RSS.png" alt="Flux RSS" title="Flux RSS" />
-      </a><a href="mailto:{{ site.email }}">
-        <img src="/img/social/Email.png" alt="E-mail" title="E-mail" />
-      </a>
-    </div>
+		<div id="logo" class="ten centered slide-down">
+			<img src="{{ site.logoUrl }}"></img>
+		</div>
+		{% include social.html %}
 
-    <div id="content" class="fade-in">
-      <article class="row">
-        <header>
-          <h1 class="static-title">{{ page.title }}</h1>
-          <p><time datetime="{{ page.date | date:'%Y-%m-%d' }}">{{ page.date | date:'%d %B %Y' }}</time> — <span class="capitalize">{{ page.categories| join }}</span></p>
-        </header>
-        <div id="post-content" class="ten">
-          {{ content }}
-        </div>
-      </article>
-      {% include footer.html %}
-    </div>
-  </body>
+		<div id="content" class="fade-in">
+			<article class="row">
+				<header>
+					<h1 class="static-title">{{ page.title }}</h1>
+					<p><time datetime="{{ page.date | date:'%Y-%m-%d' }}">{{ page.date | date:'%d %B %Y' }}</time> — <span class="capitalize">{{ page.categories| join }}</span></p>
+				</header>
+				<div id="post-content" class="ten">
+					{{ content }}
+				</div>
+			</article>
+			{% include footer.html %}
+		</div>
+	</body>
 </html>
 
